--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -23,7 +23,8 @@
         "mitchdenny.ecdc",
         "ms-azuretools.vscode-containers",
         "Anthropic.claude-code",
-        "ms-azuretools.vscode-docker"
+        "ms-azuretools.vscode-docker",
+        "GitHub.copilot"
       ],
       "settings": {
         "markdown-preview-enhanced.chromePath": "/usr/bin/chromium",
