CI/CDベストプラクティス の各項目についてMermaidなどを利用して詳細な説明を図解を加えながら説明して

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -24,7 +24,8 @@
         "ms-azuretools.vscode-containers",
         "Anthropic.claude-code",
         "ms-azuretools.vscode-docker",
-        "GitHub.copilot"
+        "GitHub.copilot",
+        "bierner.markdown-mermaid"
       ],
       "settings": {
         "markdown-preview-enhanced.chromePath": "/usr/bin/chromium",
