--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
     "--font-render-hinting=none"
   ],
   "markdown-preview-enhanced.printBackground": true,
-  "markdown-preview-enhanced.previewTheme": "github-light.css"
+  "markdown-preview-enhanced.previewTheme": "github-light.css",
+  "markdown-preview-enhanced.plantumlJarPath": "/usr/local/bin/plantuml.jar"
 }
