--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ rclone.conf
 /storj_container_app/upload_target - コピー/*.heic
 /storj_uploader_backend_api_container_app/__pycache__/*.pyc
 *.pdf
+
+venv
